--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 <a href="https://wa.me/573012105346" target="blank"><img src="./images/whatsapp.png" alt="Whatsapp" style="width: 24px;">  Whatsapp</a>
             </div>
             <div class="newEnlaces">
-                <a href="https://github.com/SamuelRm5" target="blank"><img src="./images/github.png" alt="Git Hub" style="width: 30px;"></a>
-                <a href="https://www.linkedin.com/in/samuel-rodriguez-200887230/" target="blank"><img src="./images/linkedin.png" alt="Linkedin" style="width: 24px;"></a> 
-                <a href="https://wa.me/573012105346" target="blank"><img src="./images/whatsapp.png" alt="Whatsapp" style="width: 24px;"></a>
+                <a id="git" href="https://github.com/SamuelRm5" target="blank"><img src="./images/github.png" alt="Git Hub" style="width: 30px;"></a>
+                <a id="linkeid" href="https://www.linkedin.com/in/samuel-rodriguez-200887230/" target="blank"><img src="./images/linkedin.png" alt="Linkedin" style="width: 24px;"></a> 
+                <a id="whatsapp" href="https://wa.me/573012105346" target="blank"><img src="./images/whatsapp.png" alt="Whatsapp" style="width: 24px;"></a>
             </div>
 
         </div>
