--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <img src="./images/logo.png" alt="">
             
             <div class="enlaces">
-                <a href="https://github.com/SamuelRm5" target="blank"><img src="./images/github.png" alt="Git Hub" style="width: 30px;"> Git Hub</a>
+                <a href="https://github.com/SamuelRm5" target="blank"><img src="./images/git.png" alt="Git Hub" style="width: 36px;"> Git Hub</a>
                 <a href="https://www.linkedin.com/in/samuel-rodriguez-200887230/" target="blank"><img src="./images/linkedin.png" alt="Linkedin" style="width: 24px;">  Linkedin</a> 
                 <a href="https://wa.me/573012105346" target="blank"><img src="./images/whatsapp.png" alt="Whatsapp" style="width: 24px;">  Whatsapp</a>
             </div>
             <div class="newEnlaces">
-                <a id="git" href="https://github.com/SamuelRm5" target="blank"><img src="./images/github.png" alt="Git Hub" style="width: 30px;"></a>
+                <a id="git" href="https://github.com/SamuelRm5" target="blank"><img src="./images/git.png" alt="Git Hub" style="width: 36px;"></a>
                 <a id="linkeid" href="https://www.linkedin.com/in/samuel-rodriguez-200887230/" target="blank"><img src="./images/linkedin.png" alt="Linkedin" style="width: 24px;"></a> 
                 <a id="whatsapp" href="https://wa.me/573012105346" target="blank"><img src="./images/whatsapp.png" alt="Whatsapp" style="width: 24px;"></a>
             </div>
@@ -41,7 +41,7 @@
                 <p><span>Email:</span> SamuelRM20025@gmail.com</p>
                 <p><span>Phone number:</span> +57 301 210 5346</p>
             </div>
-            <a href="#personalInfo"><button>Getting start</button></a>
+            <a href="#personalInfo"><button>Touch me</button></a>
             
         </div>
     </div>
