pagina de certificados agregada

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                 <img src="./images/formation.png" alt="">
                 <hr>
                 <div class="tarjetas">
-                    <a href="">
+                    <a href="certificates.html">
                         <div class="tarjeta">
-                            <h3>My certifies</h3>
+                            <h3>My certificates</h3>
                             <hr>
                             <p>Here, you're going to find my certifies</p>
                         </div>
