queries en certificados

--- a/certificates.html
+++ b/certificates.html
@@ -19,7 +19,8 @@
     <div class="borde">My Certificates <img src="./images/certificateLogo.png" alt=""></div>
     
     <div class="certificates">
-        <p>* It is recommended to place the cursor over the certificate to enlarge its size a bit</p>
+        <p id="reco" class="recoPc">* It is recommended to place the cursor over the certificate to enlarge its size a bit</p>
+        <p id="reco" class="recoMv">* It is recommended to touch the certificate to enlarge its size a bit</p>
         <div class="certificate">
             <div class="info">
                 <h1><span>JavaScript Moderno:</span> Guía para dominar el lenguaje</h1>
