cambio de imagen whos samuel

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     
             </div>
             <div class="img">
-                <img src="./images/familia.jpg" alt="">
+                <img src="./images/perfilsmall.png" alt="">
             </div>
         </div>
         
