ajustes en query 450

--- a/certificates.html
+++ b/certificates.html
@@ -26,6 +26,7 @@
                 <h1><span>JavaScript Moderno:</span> Guía para dominar el lenguaje</h1>
                 <p>Webpack, Clases, Propiedades privadas, ESNext, Node, Npm, Babel, Hot Reaload, CRUD, Carga de archivos y más!</p>
             </div>
+            <hr class="hr">
             <div class="img">
                 <img src="./images/Certificado-JS-img.jpg" alt="">
             </div>
