--- a/certificates.html
+++ b/certificates.html
@@ -12,6 +12,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Radio+Canada:wght@600&family=Ubuntu:wght@300&display=swap');
 
     </style>
+    <link rel="shortcut icon" href="./images/certificateLogo.png">
     <title>Certificates</title>
 </head>
 <body class="animated fast fadeIn">
