--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     Quién es <span>Samuel</span>?
                 </h2>
                 <p>Hola, mi nombre es Samue Rodríguez, tengo 20 años y vivo actualemte en la ciudad de Armenia, Quindío.<br><br>
-                Soy una persona con animo de aprender nuevas cosas y me gusta poder ayudar a los demas con mis conocimientos, buscando aprender de cada situación y mejorando las cosas en las que fallo, no solo tecnológicamnete sino también personalmente.
+                Soy una persona con animo de aprender nuevas cosas y me gusta poder ayudar a los demas con mis conocimientos, buscando aprender de cada situación y mejorando las cosas en las que fallo, no solo tecnológicamente sino también personalmente.
                 Conocí el mundo del desarrollo por accidente, pues empece a estudiar algo que creí que era de mantenimiento y terminé estudiando lo que hoy por hoy es el futuro para las personas, desde ese momento empece a querer conocer mas y mas porque encontré el desarrollo del software como un nuevo pasatiempo.</p>
 
     
