--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <img src="./images/myFormation.png" alt="">
                 <hr>
                 <div class="tarjetas">
-                    <a href="certificates.html">
+                    <a href="https://drive.google.com/drive/folders/1x4qQ-OYXusFnaiJsZ9sGclB8sLK2jZXq?usp=sharing" target="_blank">
                         <div class="tarjeta">
                             <h3>My certificates</h3>
                             <hr>
@@ -84,7 +84,7 @@
                     Mi <span>Formación</span>
                 </h2>
                 <p>Desde el momento que conocí el desarrollo de software, me he interesado bastante en todo este mundo, buscando en mis tiempos libres ocuparme en la profundización de tecnologías ya conocidas o aprender nuevas. Actualmente me encuentro estudiando una tecnología en desarrollo de sistemas y a su vez, un diplomado en la universidad de Antioquia, donde se tiene como objetivo formar como programadores para nuevas opotunidades.<br>
-                Actualemnte tengo conocimientos basicos e intermendios en los lenguajes de Python, JavaScript, TypeScript, Java, Angular, React, HTML y CSS como hoja de estilos. En el campo de las bases de datos, tengo conocimiento intermedio en bases de datos SQL. Por el lado de los gestores de versiones, manejo Github<br><br>
+                Actualemnte tengo conocimientos basicos e intermendios en los lenguajes de Python, NodeJS, JavaScript, TypeScript, Java, Angular, React, HTML y CSS como hoja de estilos. En el campo de las bases de datos, tengo conocimiento intermedio en bases de datos SQL. Por el lado de los gestores de versiones, manejo Github<br><br>
                 <i>"En el recuadro de My certificates, puedes encontrar mis certificados de los cursos vistos hasta el momento"</i></p>
                 
             </div>
